@@ -1,17 +1,7 @@
 {
-  "count": 0,
-  "uniques": 0,
+  "count": 1,
+  "uniques": 1,
   "clones": [
-    {
-      "timestamp": "2026-01-23T00:00:00Z",
-      "count": 0,
-      "uniques": 0
-    },
-    {
-      "timestamp": "2026-01-24T00:00:00Z",
-      "count": 0,
-      "uniques": 0
-    },
     {
       "timestamp": "2026-01-25T00:00:00Z",
       "count": 0,
@@ -71,6 +61,16 @@
       "timestamp": "2026-02-05T00:00:00Z",
       "count": 0,
       "uniques": 0
+    },
+    {
+      "timestamp": "2026-02-06T00:00:00Z",
+      "count": 0,
+      "uniques": 0
+    },
+    {
+      "timestamp": "2026-02-07T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
